--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 </head>
 <body>
     <div class="jumbotron"><h1>EZBIKE</h1></div>
+
+    <form class="ezbikeInput">
+		<fieldset>
+
+			<div class="form-group">
+				<button class="btn btn-primary">Use your location</button>
+			</div>
+
+			<div class="form-group">
+				<input class="form-control" id="to" type="text" placeholder="start">
+			</div>	
+
+			<div class="form-group">
+				<input class="form-control" id="from" type="text" placeholder="end">
+			</div>
+
+			<div class="form-group">
+              	<button class="btn btn-primary">Go</button>
+            </div>
+
+		</fieldset>
+	</form>
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
     <script src='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'></script>
     <script src='javascript/main.js'></script>
