--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel='stylesheet' href='styles/main.css'>
 </head>
 <body>
-    <div class="jumbotron"><h1>EZBIKE</h1></div>
+    <div class="jumbotron"><h1>EZBIKE</h1>
+    	<p>The easiest way to get from a to b on a citibike</p>
+    </div>
 
     <form class="ezbikeInput">
 		<fieldset>
@@ -30,7 +32,7 @@
 
 
 			<div class="form-group">
-				<button class="btn btn-primary btn-lg btn-block">Go</button>
+				<button class="btn btn-primary btn-lg btn-block t">Go</button>
 			</div>
 
 		</fieldset>
