--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 			<div class="form-group">
-				<button class="btn btn-primary btn-lg btn-block t">Go</button>
+				<button class="btn btn-primary btn-lg btn-block">Go</button>
 			</div>
 
 		</fieldset>
