--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</div>
 
 
-			<div class="form-group">
+			<div class="form-group" id="go">
 				<button class="btn btn-primary btn-lg btn-block">Go</button>
 			</div>
 
