--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0;'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title >ezbike</title>
     <link rel='stylesheet' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css'>
     <link rel='stylesheet' href='styles/main.css'>
@@ -15,24 +15,24 @@
 		<fieldset>
 
 			<div class="form-group">
-				<button class="btn btn-primary btn-lg btn-block">Use your location</button>
+				<button class="btn btn-primary btn-lg btn-block" id="useLo">Use your location</button>
 			</div>
 
 			<div class="bikeInput">
 				<div class="form-group">
-					<input class="form-control" id="from" type="text" placeholder="start">
+					<input class="form-control" id="start" type="text" placeholder="start">
 				</div>	
 			</div>
 
 			<div class="bikeInput">
 				<div class="form-group">
-					<input class="form-control" id="to" type="text" placeholder="finish">
+					<input class="form-control" id="finish" type="text" placeholder="finish">
 				</div>	
 			</div>
 
 
 			<div class="form-group" id="go">
-				<button class="btn btn-primary btn-lg btn-block">Go</button>
+				<button type ="submit" class="btn btn-primary btn-lg btn-block">Go</button>
 			</div>
 
 		</fieldset>
