--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</fieldset>
 	</form>
 
-	<div class="result">
+	<div id="result">
 
 	</div>
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
