html change var changes in js

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 		</fieldset>
 	</form>
 
-	<div id="result">
+	<div id="resultArea">
+
+		<div class="startChoices"></div>
+		<div class="endChoices"></div>
+		<div class="warning"></div>
 
 	</div>
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
