--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 
 	<div id="resultArea">
 
-		<div class="startChoices"></div>
+		<div class="startChoices">
+			<div id ="start1"></div>
+			<div id ="start2"></div>
+			<div id ="start3"></div>
+		</div>
 		<div class="endChoices"></div>
 		<div class="warning"></div>
 
