--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 			<div id ="start2"></div>
 		</div>
 		<div class="endChoices"></div>
+			<div id ="end0"></div>
+			<div id ="end1"></div>
+			<div id ="end2"></div>
 		<div class="warning"></div>
 
 	</div>
