--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 			<div id ="start1"></div>
 			<div id ="start2"></div>
 		</div>
-		<div class="endChoices"></div>
-			<div id ="end0"></div>
-			<div id ="end1"></div>
-			<div id ="end2"></div>
+		<div class="finishChoices"></div>
+			<div id ="finish0"></div>
+			<div id ="finish1"></div>
+			<div id ="finish2"></div>
 		<div class="warning"></div>
 
 	</div>
