--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			</div>
 
 
-			<div class="form-group" id="go">
-				<button class="btn btn-primary btn-lg btn-block">Go</button>
+			<div class="form-group" id="go">Go
+				<!--<button class="btn btn-primary btn-lg btn-block">Go</button>-->
 			</div>
 
 		</fieldset>
