--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 			<div class="form-group" id="go">Go
-				<!--<button class="btn btn-primary btn-lg btn-block">Go</button>-->
+				<button class="btn btn-primary btn-lg btn-block">Go</button>
 			</div>
 
 		</fieldset>
