--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='styles/main.css'>
 </head>
 <body>
-    <div class="jumbotron"><h1>EZBIKE</h1>
+    <div class="title"><h1>EZBIKE</h1>
     	<p>The easiest way to get from a to b on a citibike</p>
     </div>
 
