--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>example</title>
+    <title>online example</title>
 </head>
 <body>
-	<div id="click" >Click!</div>
+	<div id="GO" >Click!</div>
 	<div id="work" >Work</div>
 
 	<div id="where">Put stuff here</div>
