maybe it works?

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>online example</title>
 </head>
 <body>
-	<div id="GO" >Click!</div>
+	<div id="go" >Click!</div>
 	<div id="work" >Work</div>
 
 	<div id="where">Put stuff here</div>
