--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<div id="where">Put stuff here</div>
 
 	<div id="start0">start</div>
+	<div id="start1">start</div>
+	<div id="start2">start</div>
 
 	<!-- when you click button display lat and long
 	1 get some code to run when you click it
