more work on address inputs

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 	  	Address:    <input name="formatted_address" type="text" value="">
 	</form>
 
-	<input id="find" type="button" value"go"/>
+	<div id ="find">FIND</div>
 
 	<div id="where">Put stuff here</div>
 
-	<div class="details">
+	<div class="details" id="startLat">
   		Latitude:     <span data-geo="lat" />
   	</div>
 
-  	<div class="details">
+  	<div class="details" id="startLong">
   		Longitude:    <span data-geo="lng" />
   	</div>
 
