--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<div id="where">Put stuff here</div>
 
 	<div class="details" id="startLat">
-  		Latitude:     <span data-geo="lat" />
+  		     <span data-geo="lat" />
   	</div>
 
   	<div class="details" id="startLong">
-  		Longitude:    <span data-geo="lng" />
+  		    <span data-geo="lng" />
   	</div>
 
 
