try hiding latlong div

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>online example</title>
+     <link rel='stylesheet' href='styles/main.css'>
 </head>
 <body>
 	
@@ -15,14 +16,15 @@
 
 	<div id="where">Put stuff here</div>
 
-	<div class="details" id="startLat">
-  		     <span data-geo="lat" />
-  	</div>
+	<div class="hide">
+		<div class="details" id="startLat">
+	  		     <span data-geo="lat" />
+	  	</div>
 
-  	<div class="details" id="startLong">
-  		    <span data-geo="lng" />
-  	</div>
-
+	  	<div class="details" id="startLong">
+	  		    <span data-geo="lng" />
+	  	</div>
+	</div>
 
 		<div id="start0">start</div>
 		<div id="start1">start</div>
