--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 		<div id="start1">start</div>
 		<div id="start2">start</div>
 
+		<div id="end0">end</div>
+		<div id="end1">end</div>
+		<div id="end2">end</div>
+
+
 
 	<!-- when you click button display lat and long
 	1 get some code to run when you click it
