--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	  	Address:    <input name="formatted_address" type="text" value="">
 	</form>
 
-	<div id ="find">FIND</div>
+	<div id ="sFind">Start</div>
 
 	<div id="where">Put stuff here</div>
 
@@ -22,6 +22,22 @@
 	  	</div>
 
 	  	<div class="details" id="startLong">
+	  		    <span data-geo="lng" />
+	  	</div>
+	</div>
+
+	<form>
+	  	Address:    <input name="formatted_address" type="text" value="">
+	</form>
+
+	<div id ="endF">End</div>
+
+	<div class="hide">
+		<div class="details" id="endLat">
+	  		     <span data-geo="lat" />
+	  	</div>
+
+	  	<div class="details" id="endLong">
 	  		    <span data-geo="lng" />
 	  	</div>
 	</div>
