trying combined start and finish function

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 		</div>
 	</div>
 
+	<div id="all">HOWWWW</div>
+
 		<div id="start0">start</div>
 		<div id="start1">start</div>
 		<div id="start2">start</div>
