--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		<div id ="sFind">Start</div>
 
 		<div class="hide">
-			<div class="details" id="startLat">
-		  		     <span data-geo="lat" />
+			<div class="details">
+		  		     <span data-geo="lat" id="startLat" />
 		  	</div>
 
 		  	<div class="details" id="startLong">
-		  		    <span data-geo="lng" />
+		  		    <span data-geo="lng" id="startLong" />
 		  	</div>
 		</div>
 	</div>
