fixed lat and long var

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		  		     <span data-geo="lat" id="startLat" />
 		  	</div>
 
-		  	<div class="details" id="startLong">
+		  	<div class="details">
 		  		    <span data-geo="lng" id="startLong" />
 		  	</div>
 		</div>
