trying out an iframe

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</div>
 
 
-	<div>
+	<iframe src="page.html" width="300" height="100">
 		<form>
 		  	Address:    <input name="formatted_address" type="text" value="">
 		</form>
@@ -45,7 +45,7 @@
 		  		    <span data-geo="lng" />
 		  	</div>
 		</div>
-	</div>
+	</iframe>
 
 	<div id="all">HOWWWW</div>
 
@@ -70,3 +70,4 @@
  <script src="javascript/jquery.geocomplete.js"></script>
 <script src='direction.js'></script>
 </body>
+</html>
