more iframe stuff

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 		  		    <span data-geo="lng" />
 		  	</div>
 		</div>
+
+		<!--From the inside of a frame, a script can get a reference to the parent window via window.parent.-->
 	</iframe>
 
 	<div id="all">HOWWWW</div>
