--- a/index.html
+++ b/index.html
@@ -49,6 +49,22 @@
 		<!--From the inside of a frame, a script can get a reference to the parent window via window.parent.-->
 	</iframe>
 
+	<form>
+		  	Address:    <input name="formatted_address" type="text" value="">
+		</form>
+
+		<div id ="eFind">End</div>
+
+		<div class="hide">
+			<div class="details" id="endLat">
+		  		     <span data-geo="lat" />
+		  	</div>
+
+		  	<div class="details" id="endLong">
+		  		    <span data-geo="lng" />
+		  	</div>
+		</div>
+
 	<div id="all">HOWWWW</div>
 
 		<div id="start0">start</div>
