more iframe experiments

--- a/page.html
+++ b/page.html
@@ -27,6 +27,6 @@
  <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
  <script src="javascript/jquery.geocomplete.js"></script>
-<script src='direction.js'></script>
+<script src='iframejs.js'></script>
 </body>
 </html>
