--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div id="start2">start</div>
 
 
-	<iframe src="page.html" width="300" height="100">
+	<iframe src="page.html" width="500" height="150 ">
 		<form>
 		  	Address:    <input name="formatted_address" type="text" value="">
 		</form>
@@ -53,7 +53,7 @@
 		<!--From the inside of a frame, a script can get a reference to the parent window via window.parent.-->
 	</iframe>
 
-	<form>
+	<!--<form>
 		  	Address:    <input name="formatted_address" type="text" value="">
 		</form>
 
@@ -67,7 +67,7 @@
 		  	<div class="details" id="endLong">
 		  		    <span data-geo="lng" />
 		  	</div>
-		</div>
+		</div>-->
 
 
 
