--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		  	Address:    <input name="formatted_address" type="text" value="">
 		</form>
 
-		<div id ="sFind">Start</div>
+		<div id ="sFind">GO</div>
 
 		<div class="hide">
 			<div class="details">
