--- a/page.html
+++ b/page.html
@@ -12,7 +12,7 @@
 		  	Address:    <input name="formatted_address" type="text" value="">
 		</form>
 
-		<div id ="eFind">End</div>
+		<div id ="eFind">GO</div>
 
 		<div class="hide">
 			<div class="details" id="endLat">
