--- a/page.html
+++ b/page.html
@@ -9,7 +9,7 @@
 
 
 		<form>
-		  	Address:    <input name="formatted_address" type="text" value="">
+		  	end:    <input name="formatted_address" type="text" value="">
 		</form>
 
 		<div id ="eFind">GO</div>
