--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 	<div>
 		<form>
-		  	Address:    <input name="formatted_address" type="text" value="">
+		  	start:    <input name="formatted_address" type="text" value="">
 		</form>
 
 		<div id ="sFind">GO</div>
