--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
 		<!--From the inside of a frame, a script can get a reference to the parent window via window.parent.-->
 	</iframe>
 
+	<div id="end0">end</div>
+	<div id="end1">end</div>
+	<div id="end2">end</div>
+
 	<!--<form>
 		  	Address:    <input name="formatted_address" type="text" value="">
 		</form>
