--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div id="start2">start</div>
 
 
-	<iframe src="page.html" seamless="seamless" width="500" height="200">
+	<iframe src="page.html" seamless width="500" height="200">
 		<form>
 		  	Address:    <input name="formatted_address" type="text" value="">
 		</form>
