--- a/page.html
+++ b/page.html
@@ -23,14 +23,14 @@
 		  		    <span data-geo="lng" />
 		  	</div>
 
-		</div>
-			<!--<div id="end0">end</div>
+			<div id="end0">end</div>
 			<div id="end1">end</div>
-			<div id="end2">end</div>-->
+			<div id="end2">end</div>
+		</div>
 
  <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
  <script src="javascript/jquery.geocomplete.js"></script>
-<!--<script src='iframejs.js'></script>-->
+<script src='iframejs.js'></script>
 </body>
 </html>
