--- a/page.html
+++ b/page.html
@@ -3,6 +3,7 @@
 <head>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>online example</title>
+    <link rel='stylesheet' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css'>
      <link rel='stylesheet' href='styles/main.css'>
 </head>
 <body>		
@@ -24,7 +25,7 @@
 		  	</div>
 
 		</div>
-
+<script src='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'></script>
  <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
  <script src="javascript/jquery.geocomplete.js"></script>
