--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
 	
 	<button class="btn btn-primary btn-lg btn-block" id="go" >Use your location</button>
+
 	<div>
 		<form>
-		  	start:    <input name="formatted_address" type="text" value="">
+		  	<input name="formatted_address" type="text" value="" placeholder="start">
 		</form>
 
 		<div id ="sFind">GO</div>
