--- a/page.html
+++ b/page.html
@@ -10,7 +10,7 @@
 
 
 		<form>
-		  	end:    <input name="formatted_address" type="text" value="">
+		  	<input name="formatted_address" type="text" value="" placeholder="finish">
 		</form>
 
 		<div id ="eFind">GO</div>
