--- a/page.html
+++ b/page.html
@@ -8,12 +8,14 @@
 </head>
 <body>		
 
-
-		<form>
-		  	<input name="formatted_address" type="text" value="" placeholder="finish">
-		</form>
-
-		<div id ="eFind">GO</div>
+	 <form class="ezbikeInput">
+		<fieldset>	
+			<div class="form-group">
+				<input class="form-control" id="finish" name="formatted_address" type="text" value="" placeholder="finish">
+				<div id ="eFind">GO</div>
+			</div>
+		</fieldset>
+	</form>
 
 		<div class="hide">
 			<div class="details" id="endLat">
