--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 				</div>	
 			</div>
 
-			<iframe src="page.html" id="frame" seamless width="500" height="50" frameBorder="0" hspace="0" vspace="0" marginHeight = "0" marginWidth = "0" scrolling= "no" allowtransparency="true">
+			<iframe src="page.html">
+			<!--<iframe src="page.html" id="frame" seamless width="100%" height="100%" frameBorder="0" hspace="0" vspace="0" marginHeight = "0" marginWidth = "0" scrolling= "no" allowtransparency="true">-->
 			</iframe> 
 			
-
 		</fieldset>
 	</form>
 
