--- a/page.html
+++ b/page.html
@@ -10,9 +10,11 @@
 
 	 <form class="ezbikeInput">
 		<fieldset>	
-			<div class="form-group">
-				<input class="form-control" id="finish" name="formatted_address" type="text" value="" placeholder="finish">
-				<div id ="eFind">GO</div>
+			<div class="bikeInput">
+				<div class="form-group">
+					<input class="form-control" id="finish" name="formatted_address" type="text" value="" placeholder="finish">
+					<div id ="eFind">GO</div>
+				</div>
 			</div>
 		</fieldset>
 	</form>
