--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		 </div>
 	</div>
 
+<div id="resultArea">
 	<div id="start0">start</div>
 	<div id="start1">start</div>
 	<div id="start2">start</div>
@@ -49,6 +50,7 @@
 	<div id="end0">end</div>
 	<div id="end1">end</div>
 	<div id="end2">end</div>
+<div>
 
 	<!--<form>
 		  	Address:    <input name="formatted_address" type="text" value="">
