--- a/page.html
+++ b/page.html
@@ -12,7 +12,7 @@
 		<fieldset>	
 			<div class="bikeInput">
 				<div class="form-group">
-					<input class="form-control" id="finish" name="formatted_address" type="text" value="" placeholder="finish">
+					<input class="form-control" id="finish" name="formatted_address" type="text" value="" placeholder="finish"></input>
 					<div id ="eFind">GO</div>
 				</div>
 			</div>
