--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 	</div>
 
 <div id="resultArea">
-	<div id="start0">start</div>
-	<div id="start1">start</div>
-	<div id="start2">start</div>
+	<div id="start0"></div>
+	<div id="start1"></div>
+	<div id="start2"></div>
 
-	<div id="end0">end</div>
-	<div id="end1">end</div>
-	<div id="end2">end</div>
+	<div id="end0"></div>
+	<div id="end1"></div>
+	<div id="end2"></div>
 <div>
 
 	<!--<form>
