--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</div>
 
 <div id="resultArea">
-	<div id="start0"></div>
+	<div id="start0">hello</div>
 	<div id="start1"></div>
 	<div id="start2"></div>
 
