--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 			<div class="bikeInput">
 				<div class="form-group">
-					<input class="form-control" id="start" name="formatted_address" type="text" value="" placeholder="start">
+					<input class="form-control" id="start" name="formatted_address" type="text" value="" placeholder="start"></input>
 					<div id ="sFind">GO</div>
 				</div>	
 			</div>
