--- a/page.html
+++ b/page.html
@@ -19,6 +19,8 @@
 		</fieldset>
 	</form>
 
+	<div id="about">About</div>
+
 		<div class="hide">
 			<div class="details" id="endLat">
 		  		     <span data-geo="lat" />
