--- a/page.html
+++ b/page.html
@@ -5,6 +5,7 @@
     <title>online example</title>
     <link rel='stylesheet' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css'>
      <link rel='stylesheet' href='styles/main.css'>
+     <link rel='stylesheet' href='styles/frame.css'>
 </head>
 <body>		
 
@@ -19,7 +20,7 @@
 		</fieldset>
 	</form>
 
-	<div id="about">About</div>
+
 
 		<div class="hide">
 			<div class="details" id="endLat">
