--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 	<div id="end2"></div>
 <div>
 
+	<div id="about">About</div>
 	<!--<form>
 		  	Address:    <input name="formatted_address" type="text" value="">
 		</form>
