--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		  		<span data-geo="lat" id="endLat" />
 		  </div>
 
-		  <div class="details">
+		  <div class="details2">
 		  		<span data-geo="lng" id="endLong" />
 		 </div>
 
