--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		  		<span data-geo="lng" id="startLong" />
 		 </div>
 
-		 <div class="details">
+		 <div class="details2">
 		  		<span data-geo="lat" id="endLat" />
 		  </div>
 
