--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</fieldset>
 	</form>
 
-	<!--<div class="hide">-->
+	<div class="hide">
 		<div class="details">
 		  		<span data-geo="lat" id="startLat" />
 		  </div>
@@ -60,11 +60,8 @@
 		  		<span data-geo="lng" id="endLong" />
 		 </div>
 
-
-	<!--</div>-->
-
 <div id="resultArea">
-	<div id="start0">hello</div>
+	<div id="start0"></div>
 	<div id="start1"></div>
 	<div id="start2"></div>
 
