--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 		  <div class="details2">
 		  		<span data-geo="lng" id="endLong" />
 		 </div>
+	</div>
 
 <div id="resultArea">
 	<div id="start0"></div>
@@ -70,6 +71,8 @@
 	<div id="end2"></div>
 <div>
 
+	<div id="about">About</div>
+	<div class="words">words words words</div>
 	<!--<form>
 		  	Address:    <input name="formatted_address" type="text" value="">
 		</form>
