--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	<div id="end0"></div>
 	<div id="end1"></div>
 	<div id="end2"></div>
-<div>
+</div>
 
 	<div id="about">About</div>
 	<div class="words">words words words</div>
