--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
 	3 use lat and long in api
 	4 stick it in the div
 -->
+<div id="about">About</div>
+	<div class="words">words words words</div>
+
 <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
     <script src='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'></script>
  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
