--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 
     </div>
 
-    <div class="words">words words words</div>
+    <div class="words">
+    	<div class="x">
+    		<span class="glyphicon glyphicon-remove"></span>
+    	</div>
+
+    	words words words</div>
 
     <form class="ezbikeInput">
 		<fieldset>
