--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     		<span class="glyphicon glyphicon-remove"></span>
     	</div>
 
-    	words words words</div>
+    	words words words
+	</div>
 
     <form class="ezbikeInput">
 		<fieldset>
