--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>online example</title>
       <link rel='stylesheet' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css'>
      <link rel='stylesheet' href='styles/main.css'>
+     <link rel="apple-touch-icon" href="pics.background1.jpg"/>
 </head>
 <body>
 
