--- a/index.html
+++ b/index.html
@@ -74,10 +74,16 @@
 	</div>
 
 <div id="resultArea">
+	<div id="sHide">
+		<div id="sAt">Start at</div>
+	</div>
 	<div id="start0"></div>
 	<div id="start1"></div>
 	<div id="start2"></div>
 
+	<div id="eHide">
+		<div id="eAt">End at</div>
+	</div>
 	<div id="end0"></div>
 	<div id="end1"></div>
 	<div id="end2"></div>
