--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 			<div class="bikeInput">
 				<div class="form-group">
-					<input class="form-control" id="start" name="formatted_address" type="text" value="" placeholder="start"></input>
+					<input class="form-control" id="start" name="formatted_address" type="text" value="" placeholder="start"/>
 					<div id ="sFind">GO</div>
 				</div>	
 			</div>
@@ -42,7 +42,7 @@
 		<fieldset>	
 			<div class="bikeInput">
 				<div class="form-group">
-					<input class="form-control" id="finish" name="formatted_address" type="text" value="" placeholder="finish"></input>
+					<input class="form-control" id="finish" name="formatted_address" type="text" value="" placeholder="finish"/>
 					<div id ="eFind">GO</div>
 				</div>
 			</div>
