--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 	</div>
 
 <div id="resultArea">
-	<div id="sHide">
+
 		<div id="sAt">Start at</div>
-	</div>
+
 	<div id="start0"></div>
 	<div id="start1"></div>
 	<div id="start2"></div>
@@ -116,6 +116,7 @@
 <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
     <script src='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'></script>
  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+ <script src="basil.js"></script>
  <script src="javascript/jquery.geocomplete.js"></script>
 <script src='direction.js'></script>
 </body>
