--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <div id="resultArea">
 
-		<div id="sAt">Start at</div>
+		<div id="sAt" div class="WHAT">Start at</div>
 
 	<div id="start0"></div>
 	<div id="start1"></div>
