--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 
 <div id="resultArea">
 
-		<div class="sAt" >Start at</div>
+	<div class="sAt" >Start at</div>
 
 	<div id="start0"></div>
 	<div id="start1"></div>
 	<div id="start2"></div>
 
 	<div id="eHide">
-		<div id="eAt">End at</div>
+		<div class="eAt">End at</div>
 	</div>
 	<div id="end0"></div>
 	<div id="end1"></div>
