--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     	<div class="x">
     		<span class="glyphicon glyphicon-remove"></span>
     	</div>
-
-    	words words words
+    	We made this after being frustrated with the citibike website. And the app has so much going on it doesn't seem to work at all most of the time. <br>We provide where to find a bike where you are and dock where you're going. <br> Still very much in progress so check us out and fork us on <a href="https://github.com/galdosd/ezbike" target="_blank">Github</a>. Looks OK on a phone so bookmark to your homepage. 
 	</div>
 
     <form class="ezbikeInput">
@@ -34,7 +33,7 @@
 			<div class="bikeInput">
 				<div class="form-group">
 					<input class="form-control" id="start" name="formatted_address" type="text" value="" placeholder="start"/>
-					<div id ="sFind">GO</div>
+					<div id ="sFind"></div>
 				</div>	
 			</div>
 
@@ -43,7 +42,7 @@
 			<div class="bikeInput">
 				<div class="form-group">
 					<input class="form-control" id="finish" name="formatted_address" type="text" value="" placeholder="finish"/>
-					<div id ="eFind">GO</div>
+					<div id ="eFind"></div>
 				</div>
 			</div>
 		</fieldset>
