--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     	<div class="x">
     		<span class="glyphicon glyphicon-remove"></span>
     	</div>
-    	We made this after being frustrated with what Citibike offered online. The app has so much going on that it doesn't seem to work at all most of the time. <br><br>We wanted something SIMPLE that would tell us where to find a bike where we were and where to find an open dock at our destiniation. <br><br> Still very much in progress so check us out and fork us on <a href="https://github.com/galdosd/ezbike" target="_blank">Github</a>. Looks OK on a phone so bookmark to your homepage. 
+    	We made this after being frustrated with what Citibike offered online. The app has so much going on that it doesn't seem to work at all most of the time. <br>We wanted something SIMPLE that would tell us where to find a bike where we were and where to find an open dock at our destiniation. <br> Still very much in progress so check us out and fork us on <a href="https://github.com/galdosd/ezbike" target="_blank">Github</a>. Looks OK on a phone so bookmark to your homepage. 
 	</div>
 
     <form class="ezbikeInput">
